# CloudSpill

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  incorrect_finding.yml  rule_request.yml
.github/workflows/: ci.yml
cloudspill/: __init__.py  cli.py  context.py  logging_config.py  py.typed
cloudspill/engine/: __init__.py  hcl_expr.py  resolver.py  rule_engine.py  taint_engine.py
cloudspill/enrichers/: __init__.py  ai.py  base.py  cache.py  parser.py  types.py
cloudspill/enrichers/prompts/: __init__.py
cloudspill/enrichers/prompts/claude/: explain.txt  fix.txt  triage.txt
cloudspill/enrichers/prompts/default/: explain.txt  fix.txt  triage.txt
cloudspill/enrichers/prompts/gemini/: explain.txt  fix.txt  triage.txt
cloudspill/enrichers/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py  openai_compat.py
cloudspill/models/: __init__.py  errors.py  findings.py  graph.py  nodes.py  taint.py
cloudspill/output/: __init__.py  base.py  graph.py  json.py  markdown.py  table.py
cloudspill/parsers/: __init__.py  base.py  docker.py  dockerfile.py  registry.py  terraform.py
cloudspill/rules/: __init__.py  azure.py  base.py  docker.py  ec2.py  iam.py  rds.py  s3.py
cloudspill/rules/aws/: __init__.py
cloudspill/rules/aws/api_gateway/: __init__.py  apigw_001_no_authorization.py  apigw_002_no_waf_attached.py  apigw_003_logging_disabled.py  apigw_004_no_resource_policy_wildcard.py  apigw_005_default_execution_role_used.py  apigw_006_no_api_key_required.py
cloudspill/rules/aws/cloudfront/: __init__.py  cloudfront_001_no_https_redirect.py  cloudfront_002_tls_version_low.py  cloudfront_003_no_waf_attached.py  cloudfront_004_logging_disabled.py  cloudfront_005_origin_access_identity_missing.py  cloudfront_006_no_geo_restriction.py  cloudfront_007_query_string_forwarding_disabled.py  cloudfront_008_cache_key_missing_host_header.py
cloudspill/rules/aws/cloudtrail/: __init__.py  trail_001_cloudtrail_disabled.py  trail_002_s3_bucket_not_encrypted.py  trail_003_s3_bucket_public.py  trail_004_logs_not_sent_to_cloudwatch.py  trail_005_mfa_delete_disabled_s3_bucket.py
cloudspill/rules/aws/dynamodb/: __init__.py  ddb_001_pitr_disabled.py  ddb_002_no_encryption_customer_managed_key.py  ddb_003_ttl_not_set.py  ddb_004_streams_disabled.py  ddb_005_gsi_not_encrypted.py  ddb_006_public_api_access_allowed.py
cloudspill/rules/aws/ec2/: __init__.py  ebs_001_volume_not_encrypted.py  ebs_002_snapshot_not_encrypted.py  ebs_003_snapshot_public_access.py  ebs_004_no_backup_rule.py  ec2_001_ssh_open.py  ec2_002_open_ingress_any.py  ec2_003_no_imdsv2.py  ec2_004_public_ip.py  ec2_005_no_ebs_encryption.py  ec2_006_unencrypted_ami.py  ec2_007_termination_protection_disabled.py  ec2_008_detailed_monitoring_disabled.py  ec2_009_ebs_default_encryption_disabled.py  ec2_010_instance_attached_default_vpc.py  (+2 more)
cloudspill/rules/azure/: azure.py
cloudspill/rules/docker/: docker.py
cloudspill/tests/: test_azure_rules.py  test_enrichers.py  test_graph.py  test_graph_output.py  test_output.py  test_parser.py  test_parsers.py  test_prompts.py  test_providers.py  test_rules.py  test_taint.py
cloudspill/tests/fixtures/: Dockerfile.vulnerable  iam_wildcard.tf  s3_public.tf
docs/developer-guide/: adding-rules.md
tests/: test_apigw_rules.py  test_azure_rules.py  test_cloudfront_rules.py  test_hcl_expr.py  test_parsers.py  test_prompts.py  test_providers.py  test_resolver.py  test_rules.py  test_taint.py
tests/fixtures/: apigw_default_role.tf  apigw_no_api_key.tf  apigw_no_auth.tf  apigw_no_logging.tf  apigw_no_waf.tf  apigw_policy_wildcard.tf  cloudfront_geo.tf  cloudfront_hostheader.tf  cloudfront_http.tf  cloudfront_logging.tf  cloudfront_oai.tf  cloudfront_querystring.tf  cloudfront_tls.tf  cloudfront_waf.tf  full_stack.tf
(+259 files in other folders)
