[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudspill"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-hcl2>=4.0",
    "rich>=13.0",
    "click>=8.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0",
    "anthropic>=0.30",
]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "black",
    "isort",
    "pylint",
    "bandit",
]

[project.scripts]
cloudspill = "cloudspill.cli:scan"

[tool.mypy]
strict = true

# python-hcl2 ships no type stubs / py.typed marker.
[[tool.mypy.overrides]]
module = "hcl2"
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116"]
