[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudspill"
version = "0.1.0"
description = "Static Application Security Testing engine for Infrastructure-as-Code (Terraform / AWS)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Sami Adam Moughli" }]
requires-python = ">=3.12"
keywords = ["security", "sast", "terraform", "iac", "aws", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "python-hcl2>=4.0",
    "rich>=13.0",
    "click>=8.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/SamiAdamMoughli/CloudSpill"
Repository = "https://github.com/SamiAdamMoughli/CloudSpill"
Issues = "https://github.com/SamiAdamMoughli/CloudSpill/issues"

[project.optional-dependencies]
ai = [
    "openai>=1.0",
    "anthropic>=0.30",
]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "black",
    "isort",
    "pylint",
    "bandit",
]

[project.scripts]
cloudspill = "cloudspill.cli:scan"

[tool.mypy]
strict = true

# python-hcl2 ships no type stubs / py.typed marker.
[[tool.mypy.overrides]]
module = "hcl2"
ignore_missing_imports = true

# Optional AI providers (installed via the `ai` extra); CI type-checks the core
# without them, and they are imported lazily behind runtime guards.
[[tool.mypy.overrides]]
module = ["openai", "openai.*", "anthropic", "anthropic.*"]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
# Disabled to match this codebase's protocol-based rule architecture and let
# black own formatting:
#   C0114/C0115/C0116 missing docstrings (rules are self-describing by id)
#   C0301 line-too-long (black enforces 88; wide docstring tables are intentional)
#   R0903 too-few-public-methods (every rule is a single-`check` class)
#   W0613 unused-argument (`graph` is required by the Rule protocol)
#   R0801 duplicate-code (rules share Finding-construction boilerplate by design)
#   C0415 import-outside-toplevel (deliberate lazy imports for optional deps)
disable = [
    "C0114",
    "C0115",
    "C0116",
    "C0301",
    "R0903",
    "W0613",
    "R0801",
    "C0415",
]

[tool.bandit]
# B101: asserts are used only for internal invariants, not input validation.
skips = ["B101"]
